Archive2/84/8eba39dd48181b/output
main.cpp: In instantiation of 'struct Wraiiper::ResourceModel<double, void>':
main.cpp:79:7:   required from 'Wraiiper::Wraiiper(T*) [with T = double]'
main.cpp:121:28:   required from here
main.cpp:51:9: error: invalid parameter type 'void'
         ResourceModel(T* data, Func f)
         ^
main.cpp:51:9: error: in declaration 'Wraiiper::ResourceModel<T, Func>::ResourceModel(T*, Func)'
